--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,25 +1,43 @@
-name: Python Application
+name: Python application
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Step 1: Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      # Step 2: Set up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: make install
 
-    - name: Run tests
-      run: make run
+      # Step 4: Run tests or linting (optional)
+      # Add any testing or linting step here if necessary, like:
+      # - name: Run tests
+      #   run: pytest
+
+      # Step 5: Run the application
+      - name: Run the application
+        run: make run & sleep 10 # Allow time for the app to start
+
+      # Step 6: Check if the Flask app is running (optional)
+      # You can add a step to curl localhost to check if the Flask app is running:
+      # - name: Check Flask is running
+      #   run: curl http://localhost:3000
+
